📖 DOC: Update tutorials

--- a/exchange-docs/config.json
+++ b/exchange-docs/config.json
@@ -4,6 +4,7 @@
         "What is a mule application",
         "General guidelines",
         "Build environment",
-        "Development standards"
+        "Development standards",
+        "Tutorials"
     ]
 }
