📖 DOC: Add API Led page

--- a/exchange-docs/config.json
+++ b/exchange-docs/config.json
@@ -2,6 +2,7 @@
     "pageOrder": [
         "home",
         "What is a mule application",
+        "API-led architecture",
         "General guidelines",
         "Build environment",
         "Development standards",
